--- a/Dx.Dashboard.Cache/Dx.Dashboard.Cache.csproj
+++ b/Dx.Dashboard.Cache/Dx.Dashboard.Cache.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Reactive.Windows.Threading, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Rx-XAML.2.2.5\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -88,7 +89,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AkavacheSqliteLinkerOverride.cs" />
+    <Compile Include="CacheType.cs" />
+    <Compile Include="DefaultCacheStrategy.cs" />
+    <Compile Include="DefaultMemoryCache.cs" />
+    <Compile Include="DefaultPersistantCache.cs" />
+    <Compile Include="ICacheProvider.cs" />
+    <Compile Include="ICacheStrategy.cs" />
     <Compile Include="ReactiveSettingsStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -99,9 +105,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dx.Dashboard.Core\Dx.Dashboard.Core.csproj">
-      <Project>{A64AB275-5EBC-4A0D-BDB0-FF9AC86EBC68}</Project>
-      <Name>Dx.Dashboard.Core</Name>
+    <ProjectReference Include="..\Dx.Dashboard.Common\Dx.Dashboard.Common.csproj">
+      <Project>{9EFD7437-4332-4BC6-8DBA-E8D982329D6A}</Project>
+      <Name>Dx.Dashboard.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
