--- a/Dx.Dashboard.Test/packages.config
+++ b/Dx.Dashboard.Test/packages.config
@@ -1,4 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="akavache" version="5.0.0" targetFramework="net461" />
+  <package id="akavache.core" version="5.0.0" targetFramework="net461" />
+  <package id="akavache.sqlite3" version="5.0.0" targetFramework="net461" />
+  <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="reactiveui" version="7.4.0" targetFramework="net461" />
+  <package id="reactiveui-core" version="7.4.0" targetFramework="net461" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-XAML" version="2.2.5" targetFramework="net461" />
+  <package id="Splat" version="1.6.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.core" version="1.1.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.0" targetFramework="net461" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.0" targetFramework="net461" />
+  <package id="StructureMap" version="4.6.1" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
 </packages>
